# Xinorbis

./: README.md
Source_Code/: X10.cbproj  X10.cbproj.local  X10.cpp  X10.res  main.cpp  main.dfm  main.h
Source_Code/Forms/: XFormAbout.cpp  XFormAbout.h  XFormCategoryColours.dfm  XFormChartOptions.cpp  XFormExcludeFiles.h  XFormExcludeFolders.h  XFormExplore.cpp  XFormExplore.h  XFormFileAges.cpp  XFormFileSpread.cpp  XFormFileSpread.dfm  XFormGetDateBetween.h  XFormGetSizeBetween.cpp  XFormGetSizeBetween.h  XFormMoreDetail.cpp  XFormSearchSyntax.cpp  XFormSearchSyntax.h  XFormSearchWizard.cpp  XFormSearchWizard.dfm
Source_Code/Frames/: XFrameExploder.cpp  XFrameExploder.dfm  XFrameExploder.h  (+12 more)
X.Backup/: X.Backup.sln
X.Database/: X.Database.sln
X.Diagnostic/: X.Diagnostic.sln
X.Robot/: CMakeLists.txt  Constants.h  Convert.cpp  Convert.h  DatabaseHandler.cpp  DatabaseHandler.h  DatabaseODBC.cpp  DatabaseODBC.h  DatabaseSQlite.cpp  DatabaseSQlite.h  ErrorConstants.h  Errors.cpp  Errors.h  ExtensionSearch.h  FileDateObject.cpp  FileDateObject.h  FileExtension.cpp  FileExtension.h  FileExtensionHander.cpp  FileExtensionHandler.h  FileObject.cpp  FileObject.h  FolderHistory.h  FolderHistoryHandler.cpp  FolderHistoryHandler.h  Formatting.cpp  Formatting.h  GlobalObjects.cpp  GlobalObjects.h  Help.cpp  Help.h  Ini.cpp  Ini.h  LanguageHandler.cpp  LanguageHandler.h  MD5.cpp  MD5.h  ParameterDetails.h  ParameterHandler.cpp  ParameterHandler.h  (+45 more)
Xinorbis_Source/: ProjectGroup1.dsk  ProjectGroup1.groupproj  ProjectGroup1.groupproj.local  readme.txt  x8.dpr  x8.dproj
(+567 files in other folders)
